--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -202,7 +202,7 @@ society, 2023-.</span></font></p>
 <font size="4"><span style="font-family: Times New Roman">--&nbsp; Selected to
 <a target="_blank" style="font-family: Times New Roman" href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/4?fbclid=IwAR1d4PyRLUjFosQfpmynpn2WHrufhuURBZCJZWQwPzo13ARvsb5rBRfFOQE">
 world's top 2% scientists</a> (most widely cited scientists in different 
-disciplines) by Stanford University for four consecutive years (2019-2022).</span></font></p>
+disciplines) by Stanford University for four consecutive years (2019-2023).</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-family: Times New Roman"><font size="4">--</font></span><font size="4"><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
 <span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
@@ -211,6 +211,11 @@ Research.com Computer Science in Finland Leader Award, 2022</span></span></font>
 <font size="4"><span style="font-family: Times New Roman">-- Dr. Wei Peng's dissertation titled 
 		''Automatic neural network learning for human behavior understanding'' 
 		awarded <b>Finnish AI Dissertation Award&nbsp;2022</b>.</span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4"><span style="font-family: Times New Roman">-- Best Paper Runner 
+Up award for paper ¡°Biometric Authentication Based on Enhanced Remote 
+Photoplethysmography Signal Morphology¡± published in IEEE International Joint 
+Conference on Biometrics 2024.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4"><span style="font-family: Times New Roman">-- 2022 International 
 Society for Magnetic Resonance in Medicine (ISMRM, best conference for MRI) 
@@ -507,7 +512,7 @@ Ms.
 Xiaobai Li</span><span lang="en-US" style="font-family: Times New Roman">: </span>
 <span lang="EN-US" style="font-family: 'Times New Roman'">Reading Subtle 
 Information From Human Faces, </span>
-<span lang="en-US" style="font-family: Times New Roman">2010-2017</span></font><span lang="EN-US" style="font-family: 'Times New Roman'"><font size="4">(Co-supervisor)</font></span></p>
+<span lang="en-US" style="font-family: Times New Roman">2010-2017</span></font><span lang="EN-US" style="font-family: 'Times New Roman'"><font size="4"> (Co-supervisor)</font></span></p>
 <p class="MsoNormal" style="line-height: 200%">
 <span lang="EN-US"><font size="4" face="Times New Roman">-- </font></span>
 <font size="4">
@@ -550,7 +555,7 @@ Qiang Gao </b>(2019-2022)</font><span style="font-family: 'Times New Roman'; "><
 </span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <span style="font-family: 'Times New Roman'; "><font size="4">Mr. <b>
-Shengkang Wang </b>(2019-);</font><b><font size="4"> </font> </b></span></p>
+Shengkang Wang </b>(2019-2022);</font><b><font size="4"> </font> </b></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; margin-left: 21.0pt">
 <font face="Times New Roman" size="4">Mr. <b>
 Chensong Huo </b>(2018-2021)</font><span style="font-family: 'Times New Roman'; "><font size="4">;
