--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -312,9 +312,12 @@ for docentship application: </font> </span></u></b>
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US"><font size="4">Guest 
-editor for ten 
+editor for 11 
 special issues:</font></span></u><span lang="EN-US"><font size="4"> </font>
 </span></b></p>
+<p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top: 8px; margin-bottom: 8px">
+<font size="4">MVA special issue: Remote Physiological Signal Sensing (RePSS) 
+from Videos, 2025-2026.</font></p>
 <p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
 <font size="4">(Sanna J&auml;rvel&auml;, Guoying Zhao, Andy Nguyen, Haoyu Chen) British 
 Journal of Educational Technology (BJET) special section on
@@ -361,10 +364,11 @@ Issue on Machine Learning in Motion Analysis, Image and Vision Computing,
 Nixon) Special issue on New Advances in Video-based Gait Analysis and 
 Applications: Challenges and Solutions,<b> </b>IEEE Transactions on Systems, 
 Man, and Cybernetics - Part B: Cybernetics, 2009-2010. </font> </span></p>
-<p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; text-indent:-21.0pt; margin-top:8px; margin-bottom:8px">
+<p class="MsoNormal" style="text-align: justify; text-justify: inter-ideograph; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; text-indent:-21.0pt; margin-top:8px; margin-bottom:8px; line-height:150%">
 <font size="4">--&nbsp;<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:700; text-decoration:underline">Co-chair 
-of 2<span lang="en-us">6</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: 
-</span>2nd International Workshop on Multimodal and Responsible Affective 
+of 2<span lang="en-us">7</span> international workshops</span><span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">: 
+</span>The 2nd Micro-Action Analysis Grand Challenge (MAC 2025), with ACM MM 
+2025; 2nd International Workshop on Multimodal and Responsible Affective 
 Computing, with ACM MM 2024; The 3rd RePSS - Vision-based Remote Physiological Signal Sensing, with 
 IJCAI 2024;
 MAC: ACM Multimedia 2024 Micro-Action Analysis Challenge; Workshop on Hybrid Intelligence with ADRA 
@@ -372,7 +376,7 @@ MAC: ACM Multimedia 2024 Micro-Action Analysis Challenge; Workshop on Hybrid Int
 2023; 
 The 1st and 2nd Challenge Workshop on Micro-gesture Analysis for Hidden Emotion 
 Understanding (MiGA) with IJCAI 2023, IJCAI2024; 
-&nbsp;1st International Workshop on Multimodal and Responsible Affective Computing (MRAC 
+1st International Workshop on Multimodal and Responsible Affective Computing (MRAC 
 2023) with ACM MM 2023; Chinese-MER 
 2023: Chinese Multimodal Emotion Recognition Challenge with ACM MM 2023; 2nd Workshop on &quot;What's Next in Affect Modelling?&quot; 
 with ACII 2022; &quot;The 2nd Challenge Workshop on Remote Physiological Signal 
