--- a/publications.htm
+++ b/publications.htm
@@ -150,15 +150,19 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2025 </b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;351. Marko Savic, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;352. Marko Savic, <b>Guoying Zhao</b>.
 <u>RS+rPPG: Robust Strongly Self-Supervised Learning for rPPG</u>. TCSVT, 2025.
 </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;350. </font>
+<font face="Times New Roman" size="4">&nbsp;351. </font>
 <font face="Times New Roman" size="4">Yan Jiang, Xu Cheng, Hao Yu, Xingyu Liu, 
 Haoyu Chen, <b>Guoying Zhao</b>. <u>DSAF: Dual Space Alignment Framework for 
 Visible-Infrared Person Re-Identification</u>. IEEE Transactions on Multimedia, 
 2025.</font></p>
+<p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font face="Times New Roman" size="4">&nbsp;350. Weisong Zhao, Xiangyu Zhu, 
+Haichao Shi, Xiao-Yu Zhang, <b>Guoying Zhao</b>, Zhen Lei. Global Cross-Entropy 
+Loss for Deep Face Recognition. IEEE Trans. on Image Processing. 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font face="Times New Roman" size="4">&nbsp;349. Shuyang Chu, Menghan Xia, 
 Mengyao Yuan, Xin Liu, Tapio Sepp&auml;nen, <b>Guoying Zhao</b>, Jingang Shi. Robust 
