--- a/teammembers.htm
+++ b/teammembers.htm
@@ -198,6 +198,9 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
+		<font face="Times New Roman"><b>Mr. Yan Jiang</b></font></td>
+		<td height="0" align="center" valign="top" width="225">
 		<div style="language:fi;line-height:150%;margin-top:3.84pt;margin-bottom:0pt;
 margin-left:.31in;text-indent:-.31in;text-align:left;direction:ltr;unicode-bidi:
 embed;vertical-align:baseline">
@@ -211,9 +214,7 @@ embed;vertical-align:baseline">
 			<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 			<font face="Times New Roman"><b>Ms. Vijaya Mohanakrishnan Nair</b></font></div>
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">&nbsp;</td>
-		<td width="224" height="0" align="center" valign="top">
-		&nbsp;</td>
-		<td width="184" height="0" align="center" valign="top">
+		<td width="223" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
