--- a/publications.htm
+++ b/publications.htm
@@ -328,7 +328,7 @@ Micro-Expressions: An Overview.</u> Proceedings of the IEEE. 2023. </font></p>
 Liu, Xiaobai Li, <b>Guoying Zhao</b>. <u>SMG: A Micro-Gesture Dataset Towards 
 Spontaneous Body Gestures for Emotional Stress State Analysis</u>. International 
 Journal on Computer Vision (IJC</font><font face="Times New Roman" size="4">V),<span lang="en-us">
-</span>131: 1346¨C1366, 2023.</font></p>
+</span>131: 1346 - 1366, 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
 <font face="Times New Roman" size="4">&nbsp;31<span lang="en-us">7</span>. Haoyu Chen, Hao Tang, Radu 
 Timofte, Luc Van Gool, <b>Guoying Zhao</b>. <u>LART: Neural Correspondence 
