--- a/teammembers.htm
+++ b/teammembers.htm
@@ -250,9 +250,14 @@ embed;vertical-align:baseline">
 		<p>
 		<font face="Times New Roman">Doctoral researcher<br>
 		<br>
-		Julius-Maximilians-Universität Würzburg</font></td>
+		Julius-Maximilians-Universität Würzburg<span lang="zh-cn">, Germany</span></font></td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<b><font face="Times New Roman">Mr. Amar TIOUS</font></b><p>&nbsp;</p>
+		<p style="text-align: center">
+		<font face="Times New Roman">Doctoral <span lang="zh-cn">student</span></font></p>
+		<p>&nbsp;</p>
+		<p>Université de Nantes<span lang="zh-cn">, France.</span></p>
+		<p><span lang="zh-cn">Mar. 2025 - June 2025</span></td>
 		<td height="0" align="center" valign="top" width="184">
 		<p>&nbsp;</p>
 		<p>&nbsp;</td>
