--- a/publications.htm
+++ b/publications.htm
@@ -150,57 +150,62 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2025 </b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;355. Marko Savic, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;356. Marko Savic, <b>Guoying Zhao</b>.
 <u>RS+rPPG: Robust Strongly Self-Supervised Learning for rPPG</u>. TCSVT, 2025.
 </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;354. </font>
+<font face="Times New Roman" size="4">&nbsp;355. </font>
 <font face="Times New Roman" size="4">Yan Jiang, Xu Cheng, Hao Yu, Xingyu Liu, 
 Haoyu Chen, <b>Guoying Zhao</b>. <u>DSAF: Dual Space Alignment Framework for 
 Visible-Infrared Person Re-Identification</u>. IEEE Transactions on Multimedia, 
 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4">&nbsp;353. Weisong Zhao, Xiangyu Zhu, 
+<font face="Times New Roman" size="4">&nbsp;354. Weisong Zhao, Xiangyu Zhu, 
 Haichao Shi, Xiao-Yu Zhang, <b>Guoying Zhao</b>, Zhen Lei. Global Cross-Entropy 
 Loss for Deep Face Recognition. IEEE Trans. on Image Processing. 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4"><span lang="fi">&nbsp;35</span>2<span lang="fi">.
+<font face="Times New Roman" size="4"><span lang="fi">&nbsp;35</span>3<span lang="fi">.
 </span>Ling Zhou, Mingpei Wang, Xiaohua Huang, Wenming Zheng, Qirong Mao, <b>
 Guoying Zhao</b>. An empirical study of super-resolution on low-resolution 
 micro-expression recognition. IEEE Transactions on Affective Computing, 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4">&nbsp;351. Shuyang Chu, Menghan Xia, 
+<font face="Times New Roman" size="4">&nbsp;352. Shuyang Chu, Menghan Xia, 
 Mengyao Yuan, Xin Liu, Tapio Sepp&auml;nen, <b>Guoying Zhao</b>, Jingang Shi. Robust 
 Video-based Remote Physiological Measurement through Latent Codebook Querying. 
 IEEE Journal of Biomedical and Health Informatics. 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;350. Hao Yu, Haoyu Chen, Wei Peng, 
+<font face="Times New Roman" size="4">&nbsp;351. Hao Yu, Haoyu Chen, Wei Peng, 
 Xu Cheng, <b>Guoying Zhao</b>.
 <a target="_blank" href="https://openreview.net/forum?id=orSt7BTll2&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DAAAI.org%2F2025%2FConference%2FAuthors%23your-submissions)">
 FreeNet: Liberating Depth-wise Separable Operations for Building Faster Mobile 
 Vision Architectures</a>. AAAI Conference on Artificial Intelligence (AAAI 
 2025). (Acceptance rate: 23.4%) </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;349. </font><font face="Times New Roman" size="4">Ali Salar, 
+<font size="4">&nbsp;350. </font><font face="Times New Roman" size="4">Ali Salar, 
 Qing Liu, Yingli Tian, <b>Guoying Zhao</b>. Enhancing Facial Privacy Protection 
 via Weakening Diffusion Purification. CVPR 2025. </font><font size="4">
 (Acceptance rate: 22.1%)</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;348. Yante Li, Hanwen Qi, Haoyu Chen, Xinlian Liang, <b>
+<font size="4">&nbsp;349. Yante Li, Hanwen Qi, Haoyu Chen, Xinlian Liang, <b>
 Guoying Zhao</b>. Deep Change Monitoring: A Hyperbolic Representative Learning 
 Framework and A Dataset for Long-term Fine-grained Tree Change Detection. CVPR 
 2025. (Acceptance rate: 22.1%)</font></p>
 <div class="note-authors">
 	<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
-	<font size="4" face="Times New Roman">&nbsp;347. Yan Jiang, Hao Yu, Xu 
+	<font size="4" face="Times New Roman">&nbsp;348. Yan Jiang, Hao Yu, Xu 
 	Cheng, Haoyu Chen, Zhaodong Sun, <b>Guoying Zhao</b>. From Laboratory to 
 	Real World: A New Benchmark Towards Privacy-Preserved Visible-Infrared 
 	Person Re-Identification. CVPR 2025. (Acceptance rate: 22.1%)</font></div>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;346. Hao Yu, Haoyu Chen, <b>Guoying Zhao</b>. <u>Learning 
+<font size="4">&nbsp;347. Hao Yu, Haoyu Chen, <b>Guoying Zhao</b>. <u>Learning 
 Binary-Antithetical Information Bottleneck for Generalizable Face Anti-Spoofing</u>. 
 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 
 2025.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;346. Muzammil Behzad, <b>Guoying Zhao</b>. AffectVLM: 
+Contrastive Language-Image Learning with Augmented Textual Prompts for 3D/4D 
+Facial Expression Recognition Using Vision-Language Model. 19th IEEE 
+International Conference on Automatic Face and Gesture Recognition (FG), 2025.</font></p>
 <p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
 <font size="4"><span lang="fi">&nbsp;34</span>5<span lang="fi">. </span>Q<span lang="fi">ianru 
 Xu, Mengting Wei, Huai</span>-Qian Khor, Vankee Lin, <b>Guoying Zhao</b>. SunVid: 
