--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -202,57 +202,51 @@ Selected to </font>
 (most widely cited scientists in different disciplines) by Stanford University 
 for four consecutive years (2019-2023).</font></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
-<font size="4">-- <b><u><span style="font-family: Times New Roman">Co-Program 
-chair of ACM International Conference on Multimodal Interaction 2021 (ICMI).</span></u></b></font></p>
+<font size="4">-- <span style="font-family: Times New Roman"><b><u>Co-Program 
+chair</u> </b>of International Conference on Acoustics, Speech, and Signal 
+Processing, ICASSP 2029 (Copenhagen, Denmark); European Conference on Computer 
+Vision, ECCV 2028 (Bucharest, Romania); ACM International Conference on 
+Multimodal Interaction, ICMI 2021 (Montreal, Canada).</span></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
+<font size="4"><span style="font-family: Times New Roman"><b>-- <u>General Chair</u></b> 
+of ACII 2025, 8-11 Oct 2025, <a name="_Hlk191915448">
+<font face="Times New Roman">Canberra, Australia; </font></a>
+<a target="_blank" style="font-family: Times New Roman" href="https://www.iitrpr.ac.in/cvip2025">
+CVIP 2025</a>,
+<a target="_blank" style="font-family: Times New Roman" href="https://www.iitrpr.ac.in/">
+IIT Ropar</a>, India, December 10-13, 2025; Arctic AI days, June 1-2, 2022, 
+Oulu; ICBEA 2019, Stockholm, Sweden, 2019.</span></font></p>
+<p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
+<font size="4">-- <b><u><span style="font-family: Times New Roman">International 
+Advisory Chair / Committee member:</span></u></b></font><span lang="EN-US" style="font-size: 12.0pt; font-family: 'Times New Roman',serif"><u><b>
+</b></u></span><a name="_Hlk191915466">
+<span lang="EN-US" style="font-family: 'Times New Roman',serif"><font size="4">
+2025 International Conference on Image Processing and Media Computing (ICIPMC 
+2025); ICACA 2024 (3rd International Conference on Advanced Computing and 
+Applications (ICACA-2024) by CSI Kolkata Chapter)</font></span></a><span lang="EN-US" style="font-family: 'Times New Roman',serif"><font size="4">; 
+The 1st Challenge and Workshop for 4D Micro-Expression Recognition for Mind 
+Reading (4DMR) with IJCAI 2025.</font></span></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
 <font size="4"><span lang="en-us">--</span> <b><u>
 <span style="font-family: Times New Roman">Tutorial Chair for ICPR 2024 
 (Kolkata, India).</span></u></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
-<font size="4">-- <span style="font-family: Times New Roman"><u><b>International 
-Advisory Committee member</b></u>: ICACA 2024 (3-rd International Conference on 
-Advanced Computing and Applications (ICACA-2024) by CSI Kolkata Chapter).</span></font></p>
-<p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
 <font size="4"><span lang="en-us">--</span> <b><u>
-<span style="font-family: Times New Roman">Panels Chair for FG 
+<span style="font-family: Times New Roman">Panel Chair for FG 
 2023 (Hawaii, USA).</span></u></b></font></p>
-<p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
-<font size="4"><b><span style="font-family: Times New Roman">-- <u>General Chair 
-for Arctic AI days 2022</u></span></b></font></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
 <span style="font-family: Times New Roman"><b><font size="4">-- <u>Publicity 
 chair</u></font></b></span><font size="4"><span style="font-family: Times New Roman"> 
-of 22nd Scandinavian Conference on Image Analysis (SCIA 2023), Levi, Finland.</span></font></p>
-<p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
-<font size="4">
-<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
--- </span><b><u>
-<span style="font-family: Times New Roman">General chair</span></u></b><span style="font-family: Times New Roman"> 
-of &nbsp;2022 International Conference on Image Processing and Media Computing (ICIPMC 
-2022), May 27-29, 2022 Xi'an, China. </span></font></p>
-<p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
-<font size="4">
-<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
---</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US" style="font-family: Times New Roman"><font size="4">Co-publicity chair of Conference on Automatic Face and Gesture Recognition (FG 
-2018). </font> </span></u></b></p>
+</span></font><span lang="EN-US" style="font-family: Times New Roman">
+<font size="4">of 22nd Scandinavian Conference on Image Analysis (SCIA 2023), 
+Levi, Finland; FG 2018, Xi¡¯an, China.</font></span></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US" style="font-family: Times New Roman"><font size="4">Late 
 Breaking Results Co-Chairs </font> </span></u></b>
 <span lang="EN-US" style="font-family: Times New Roman"><font size="4">of 
-21st ACM International Conference on Multimodal Interaction (ICMI 2019)</font></span></p>
-<p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
-<font size="4">
-<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
---</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><b><u><span lang="EN-US" style="font-family: Times New Roman"><font size="4">General chair </font> </span></u></b>
-<span lang="EN-US" style="font-family: Times New Roman"><font size="4">of</font><b><font size="4">
-</font>
-</b></span>
-<span lang="EN-US" style="font-family: Times New Roman; color: black">
-<font size="4">3rd and 4th International Conference on Biometric Engineering and 
-Applications (ICBEA 2019, Stockholm, Sweden, 2019; and ICBEA 2020, Xi'an, China, 
-2020)</font></span></p>
+21st ACM International Conference on Multimodal Interaction (ICMI 2019).</font></span></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; margin-left: 21.0pt; margin-top:8px; margin-bottom:8px">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">--&nbsp;</span><span style="font-style: normal; font-variant: normal; font-family: Times New Roman; font-weight: 700">Area Chair</span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal"> 
