--- a/publications.htm
+++ b/publications.htm
@@ -150,9 +150,22 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2025 </b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;356. Marko Savic, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;359. Marko Savic, <b>Guoying Zhao</b>.
 <u>RS+rPPG: Robust Strongly Self-Supervised Learning for rPPG</u>. TCSVT, 2025.
 </font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;358. Xu Cheng, Shuya Deng, Hao Yu, <b>Guoying Zhao</b>. 
+DMANet: Dual-modality alignment network for visible¨Cinfrared person 
+re-identification. Pattern Recognition, 157, 110859, 2025.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+&nbsp;<font face="Times New Roman" size="4">357. Wenhui Ji, Xu Cheng, Yan Jiang, 
+Zhaodong Sun, <b>Guoying Zhao</b>. Learning from Yourself to Others for 
+Unsupervised Visible-Infrared Re-Identification. TCSVT, 2025.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font face="Times New Roman" size="4">&nbsp;356. Yang Liu, Kevin H. M. Cheng, 
+Marko Savic, Haoyu Chen, Zitong Yu, <b>Guoying Zhao</b>. 3D Face 
+De-identification with Preserving Multi-Facial Attributes: A Benchmark. IEEE 
+Transactions on Biometrics, Behavior, and Identity Science. 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font face="Times New Roman" size="4">&nbsp;355. </font>
 <font face="Times New Roman" size="4">Yan Jiang, Xu Cheng, Hao Yu, Xingyu Liu, 
