--- a/teammembers.htm
+++ b/teammembers.htm
@@ -160,11 +160,11 @@ span.contentpasted0
 		<img border="0" src="Boyi.jpg" width="153" height="154"></td>
 		<td width="226" height="0" align="center" valign="top">
 		<img src="https://media.licdn.com/dms/image/v2/D4E03AQG4_shUiphxtA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1692620457145?e=2147483647&v=beta&t=asArQ7bK-aAq8UKeePZNzrtG7J6rX2U20z5tVZIgSd4" jsaction class="sFlh5c FyHeAf iPVvYb" style="max-width: 200px; width: 145px; height: 149px; margin: 0px" alt="Samuel Boccara - Courbevoie, Île-de-France, France | Profil ..." jsname="kn3ccd" aria-hidden="false"></td>
+		<td height="0" align="center" valign="top" width="184">
+		　<img width="145" src="https://media.licdn.com/dms/image/v2/C4D03AQF8DmVq7l3Raw/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1629272312741?e=1752710400&v=beta&t=FgLzyfsXYfQr-5PKqPLcPuR5E_ilkrN06NYHeECLGm8" loading="lazy" height="145" alt="View Arto Apila’s  graphic link" id="ember396" class="ivm-view-attr__img--centered EntityPhoto-circle-3  update-components-actor__avatar-image evi-image lazy-image ember-view"></td>
 		<td height="0" align="center" valign="top" width="224">
 		<img border="0" src="Boshra.jpg" width="145" height="156"></td>
-		<td height="0" align="center" valign="top" width="184">
-		　</td>
-		<td height="0" align="center" valign="top" width="225">
+		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 	</tr>
 	<tr>
@@ -172,11 +172,13 @@ span.contentpasted0
 		<font face="Times New Roman"><b>Mr. Boyi Z</b></font><span lang="en-us"><b><font face="Times New Roman">HENG</font></b></span></td>
 		<td width="226" height="0" align="center" valign="top">
 		<font face="Times New Roman"><b>Mr. Samuel B<span lang="zh-cn">OCCARA</span></b></font></td>
-		<td height="0" align="center" valign="top" width="224">
-		<p><font face="Times New Roman"><b>Ms. Boshra <span lang="zh-cn">NAJARI</span></b></font></td>
 		<td height="0" align="center" valign="top" width="184">
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.2cm">　</td>
-		<td height="0" align="center" valign="top" width="225">
+		　<font face="Times New Roman"><b>Mr. Arto APILA<span lang="zh-cn">
+		</span>(Co-supervised by Dr. Dorina Rajanen)</b></font></td>
+		<td height="0" align="center" valign="top" width="224">
+		<font face="Times New Roman"><b>Ms. Boshra <span lang="zh-cn">NAJARI</span></b></font><p>
+		<span lang="zh-cn"><b>(Primarily supervised with Prof. Andy Nguyen)</b></span></td>
+		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 	</tr>
 	<tr>
@@ -192,7 +194,7 @@ span.contentpasted0
 		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="184" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<img width="200" title="Ata Jodeiri Seyedian" src="https://media.licdn.com/dms/image/v2/D5603AQE8yqyyR21tHg/profile-displayphoto-shrink_400_400/B56ZVx5dymGQAg-/0/1741372645497?e=1752710400&v=beta&t=D32kKHwglUFiZl41NG_n6-sIzVEdcDwAbHS3d_Xfj68" height="200" alt="Ata Jodeiri Seyedian" id="ember36" class="NAFoOlwGcQFYvYeSkGxdjXBwRLDcpMOqE pv-top-card-profile-picture__image--show evi-image ember-view"></td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
 	</tr>
@@ -215,7 +217,8 @@ embed;vertical-align:baseline">
 			<font face="Times New Roman"><b>Ms. Vijaya Mohanakrishnan Nair</b></font></div>
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">&nbsp;</td>
 		<td width="223" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<font face="Times New Roman"><b>Mr. Seyedata Jodeiri Seyedian </b>
+		</font></td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
 	</tr>
