--- a/teammembers.htm
+++ b/teammembers.htm
@@ -177,7 +177,7 @@ span.contentpasted0
 		</span>(Co-supervised by Dr. Dorina Rajanen)</b></font></td>
 		<td height="0" align="center" valign="top" width="224">
 		<font face="Times New Roman"><b>Ms. Boshra <span lang="zh-cn">NAJARI</span></b></font><p>
-		<span lang="zh-cn"><b>(Primarily supervised with Prof. Andy Nguyen)</b></span></td>
+		<span lang="zh-cn"><b>(Primarily supervised by Prof. Andy Nguyen)</b></span></td>
 		<td height="0" align="center" valign="top" width="224">
 		&nbsp;</td>
 	</tr>
@@ -217,6 +217,7 @@ embed;vertical-align:baseline">
 			<font face="Times New Roman"><b>Ms. Vijaya Mohanakrishnan Nair</b></font></div>
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">&nbsp;</td>
 		<td width="223" height="0" align="center" valign="top">
+		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Seyedata Jodeiri Seyedian </b>
 		</font></td>
 		<td width="222" height="0" align="center" valign="top">
