--- a/publications.htm
+++ b/publications.htm
@@ -155,7 +155,7 @@ Jan. 2018.</font></p>
 </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <font size="4">&nbsp;358. Xu Cheng, Shuya Deng, Hao Yu, <b>Guoying Zhao</b>. 
-DMANet: Dual-modality alignment network for visible¨Cinfrared person 
+DMANet: Dual-modality alignment network for visible-infrared person 
 re-identification. Pattern Recognition, 157, 110859, 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 &nbsp;<font face="Times New Roman" size="4">357. Wenhui Ji, Xu Cheng, Yan Jiang, 
