--- a/personal.htm
+++ b/personal.htm
@@ -63,35 +63,33 @@ in 2022 elected to a </span>
 and in 2023 elected to a </span>
 <span style="font-family: Times New Roman; font-weight: 700"> member of Academia 
 Europaea</span><span style="font-family: Times New Roman; ">.</span><span style="font-family: Times New Roman; font-weight: normal"> She has 
-authored or co-authored more than <span lang="en-us">340</span> papers in journals and conferences, and 
+authored or co-authored more than <span lang="en-us">350</span> papers in journals and conferences, and 
 has served </span> </font>
 <span style="font-family: Times New Roman; font-weight: normal"><font size="4">
 as a reviewer for many journals and conferences. Her papers have currently over 
-307<span lang="en-us">00</span> citations in Google Scholar 
-(h-index 86). She i</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">s
-<span style="font-weight: normal; font-family: Times New Roman">&nbsp;</span>Associate 
-Editor in Chief for Computer Vision and Image Understanding (CVIU), tutorial <span lang="en-us">c</span>hair for ICPR 
-2024, panel chair for FG 2023, and publicity chair for SCIA 2023. S</span><span style="font-family: Times New Roman">he </span>
-<span style="font-family: Times New Roman; font-weight: normal">was </span>
-<b>
+328<span lang="en-us">00</span> citations in Google Scholar 
+(h-index 89). She i</font></span><font size="4"><span style="font-family: Times New Roman; font-weight: normal">s
+<span style="font-weight: normal; font-family: Times New Roman">&nbsp;</span></span><span style="font-family: Times New Roman; font-weight: 700">Associate 
+Editor in Chief</span><span style="font-family: Times New Roman; font-weight: normal"> for Computer Vision and Image Understanding (CVIU) 
+and general co-chair for ACII 2025 and CVIP 2025. She was </span><b>
 <span style="font-family: Times New Roman">general chair</span></b><span style="font-family: Times New Roman"> 
 of &nbsp;Arctic AI days 2022, International Conference on Image Processing 
 and Media Computing 2022 (ICIPMC 2022)</span><span style="font-family: Times New Roman; font-weight: normal"><span lang="en-us"> 
 and </span>ICBEA (2019, 2020)</span><span lang="en-us" style="font-family: Times New Roman">,
-</span><span style="font-family: Times New Roman; font-weight: 700">co-program chair</span><span style="font-family: Times New Roman; font-weight: normal"> of ACM International Conference on Multimodal 
-Interaction 2021 (ICMI), </span>
-<span style="font-family: Times New Roman; font-weight: 700">co-chair for Late Breaking 
-Results</span><span style="font-family: Times New Roman; font-weight: normal"> of ICMI 
-2019, </span><span style="font-family: Times New Roman; font-weight: 700">
-co-publicity chair</span><span style="font-family: Times New Roman; font-weight: normal"> 
-for FG 2018, has served as area chairs for several conferences and is<span lang="en-us">/was</span> </span>
+</span><span style="font-family: Times New Roman; font-weight: 700">program co-chair</span><span style="font-family: Times New Roman; font-weight: normal"> of ACM International Conference on Multimodal 
+Interaction 2021 (ICMI), tutorial <span lang="en-us">c</span>hair for ICPR 
+2024, panel chair for FG 2023, and publicity (co-) chair for SCIA 2023 and F</span><span style="font-family: Times New Roman; ">G</span><span style="font-family: Times New Roman; "> 
+2018, co-chair for Late Breaking 
+Results </span><span style="font-family: Times New Roman; font-weight: normal"> of ICMI 
+2019, has served as area chairs for several conferences and is<span lang="en-us">/was</span> </span>
 <span style="font-family: Times New Roman; font-weight: 700">associate 
 editor</span><span style="font-family: Times New Roman; font-weight: normal"> for Pattern Recognition, 
 IEEE Trans. on Multimedia, IEEE Trans. on Circuits and Systems for 
 Video Technology, Image and Vision Computing, Frontiers in Psychology, Journal 
 of Electronic Imaging, and International Journal of Network Dynamics and 
 Intelligence Journals. She has lectured tutorials at FG<span lang="en-us"> 2018, </span>SCIA 
-2013, ICCV 2009 and ICPR 2006, and authored/edited three books and <span lang="en-us">nine</span> 
+2013, ICCV 2009 and ICPR 2006, and authored/edited three books and
+<span lang="en-us">10</span> 
 special issues in journals. Dr. Zhao was a Co-Chair of many International Workshops / special 
 sessions in top venues, such as ICCV, 
 CVPR, ECCV, ACCV and FG. Her students <span lang="en-us">and 
@@ -192,7 +190,7 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<p style="margin-top: 24px; margin-bottom: 24px"><span lang="en-us"><u>
 		<font face="Times New Roman">2023.11.09:<b> </b></font></u></span>
 		<font face="Times New Roman"><b>Dr. Wei Peng</b>¡¯s dissertation titled 
-		¡°Automatic neural network learning for human behavior understanding¡± 
+		&quot;Automatic neural network learning for human behavior understanding&quot; 
 		awarded </font>
 		<span style="font-size: 12.0pt; font-family: 'Times New Roman',serif; font-weight: 700">
 		Finnish AI Dissertation Award&nbsp;2022</span><font face="Times New Roman"><span lang="en-us">.</span></font></p>
