--- a/teammembers.htm
+++ b/teammembers.htm
@@ -188,13 +188,13 @@ span.contentpasted0
 	</tr>
 	<tr>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
-		<td width="223" height="0" align="center" valign="top">
-		&nbsp;</td>
+		<img border="0" src="Yan.jpg" width="145" height="190"></td>
+		<td width="184" height="0" align="center" valign="top">
+		<img border="0" src="Ada.jpg" width="195" height="190" align="center"></td>
 		<td width="224" height="0" align="center" valign="top">
 		&nbsp;</td>
 		<td width="184" height="0" align="center" valign="top">
-		<img width="200" title="Ata Jodeiri Seyedian" src="https://media.licdn.com/dms/image/v2/D5603AQE8yqyyR21tHg/profile-displayphoto-shrink_400_400/B56ZVx5dymGQAg-/0/1741372645497?e=1752710400&v=beta&t=D32kKHwglUFiZl41NG_n6-sIzVEdcDwAbHS3d_Xfj68" height="200" alt="Ata Jodeiri Seyedian" id="ember36" class="NAFoOlwGcQFYvYeSkGxdjXBwRLDcpMOqE pv-top-card-profile-picture__image--show evi-image ember-view"></td>
+		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
 	</tr>
@@ -202,24 +202,14 @@ span.contentpasted0
 		<td height="0" align="center" valign="top" width="225">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Yan Jiang</b></font></td>
-		<td height="0" align="center" valign="top" width="225">
-		<div style="language:fi;line-height:150%;margin-top:3.84pt;margin-bottom:0pt;
-margin-left:.31in;text-indent:-.31in;text-align:left;direction:ltr;unicode-bidi:
-embed;vertical-align:baseline">
-			<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-			<font face="Times New Roman"><b>Mr. Sabin Bhatta</b></font></div>
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">&nbsp;</td>
-		<td width="223" height="0" align="center" valign="top">
-		<div style="language:fi;line-height:150%;margin-top:3.84pt;margin-bottom:0pt;
-margin-left:.31in;text-indent:-.31in;text-align:left;direction:ltr;unicode-bidi:
-embed;vertical-align:baseline">
-			<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
-			<font face="Times New Roman"><b>Ms. Vijaya Mohanakrishnan Nair</b></font></div>
-		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">&nbsp;</td>
 		<td width="223" height="0" align="center" valign="top">
 		<p style="text-align: center; margin-top: 0.2cm; margin-bottom: 0.5cm">
 		<font face="Times New Roman"><b>Mr. Seyedata Jodeiri Seyedian </b>
 		</font></td>
+		<td width="223" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td width="223" height="0" align="center" valign="top">
+		&nbsp;</td>
 		<td width="222" height="0" align="center" valign="top">
 		&nbsp;</td>
 	</tr>
@@ -256,17 +246,16 @@ embed;vertical-align:baseline">
 		<br>
 		Julius-Maximilians-Universität Würzburg<span lang="zh-cn">, Germany</span></font></td>
 		<td height="0" align="center" valign="top" width="225">
-		<b><font face="Times New Roman">Mr. Amar TIOUS</font></b><p>&nbsp;</p>
-		<p style="text-align: center">
-		<font face="Times New Roman">Doctoral <span lang="zh-cn">student</span></font></p>
-		<p>&nbsp;</p>
-		<p>Université de Nantes<span lang="zh-cn">, France.</span></p>
-		<p><span lang="zh-cn">Mar. 2025 - June 2025</span></td>
+		<b><font face="Times New Roman"><span lang="zh-cn">Dr. </span>Luu Tu 
+		Nguyen</font></b></td>
 		<td height="0" align="center" valign="top" width="184">
-		<p>&nbsp;</p>
+		<p><b><font face="Times New Roman"><span lang="zh-cn">&nbsp;Prof. </span>
+		Le Thanh Ha</font></b></p>
 		<p>&nbsp;</td>
 		<td height="0" align="center" valign="top" width="225">
-		&nbsp;</td>
+		<p class="MsoNormal"><b><font face="Times New Roman">Prof. Nguyen Thanh 
+		Thuy&nbsp;</font></b></p>
+&nbsp;</td>
 	</tr>
 	</table>
 <p class="title" style="margin-top:1cm; margin-bottom:9pt">
@@ -527,6 +516,35 @@ embed;vertical-align:baseline">
 <p class="title" style="line-height: 150%">
 <font face="Times New Roman" size="4"><b>Past visiting researchers:</b></font></p>
 <table border="0" width="40%">
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="397">
+		&nbsp;</td>
+	</tr>
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="397">
+		<b><font face="Times New Roman"><span lang="zh-cn">Prof. </span>Le Thanh 
+		Ha</font></b><p>&nbsp;</p>
+		<p><span data-huuid="9982943759158199878"><mark class="QVRyCf">
+		<span lang="zh-cn">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		</span>Vietnam National University</mark></span></td>
+	</tr>
+	<tr>
+		<td width="226" height="0" align="center" valign="top">
+		&nbsp;</td>
+		<td height="0" align="center" valign="top" width="397">
+		<b><font face="Times New Roman">Mr. Amar TIOUS</font></b><p>&nbsp;</p>
+		<p style="text-align: center">
+		<b>
+		<font face="Times New Roman">Doctoral <span lang="zh-cn">student</span></font></b></p>
+		<p>&nbsp;</p>
+		<p style="text-align: center"><b>Université de Nantes<span lang="zh-cn">, France</span></b></p>
+		<p style="text-align: center">&nbsp;</p>
+		<p style="text-align: center"><span lang="zh-cn">Mar. 2025 - June 2025</span></td>
+	</tr>
 	<tr>
 		<td width="226" height="0" align="center" valign="top">
 		<img border="0" src="Xingxun.jpg" width="130" height="148"></td>
