--- a/publications.htm
+++ b/publications.htm
@@ -150,75 +150,95 @@ Jan. 2018.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
 <span lang="en-us"><font size="5"><b>2025 </b></font></span></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;359. Marko Savic, <b>Guoying Zhao</b>.
+<font face="Times New Roman" size="4">&nbsp;363. Marko Savic, <b>Guoying Zhao</b>.
 <u>RS+rPPG: Robust Strongly Self-Supervised Learning for rPPG</u>. TCSVT, 2025.
 </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;358. Xu Cheng, Shuya Deng, Hao Yu, <b>Guoying Zhao</b>. 
+<font size="4">&nbsp;362. Qianru Xu, Feng Vankee Lina, Yang Liu, <b>Guoying Zhao</b>. 
+Bridging gaps in sundown syndrome research: a systematic review and roadmap for 
+future multimodal approaches. Archives of Clinical Neuropsychology, 2025.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;361. Xu Cheng, Shuya Deng, Hao Yu, <b>Guoying Zhao</b>. 
 DMANet: Dual-modality alignment network for visible-infrared person 
 re-identification. Pattern Recognition, 157, 110859, 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-&nbsp;<font face="Times New Roman" size="4">357. Wenhui Ji, Xu Cheng, Yan Jiang, 
+&nbsp;<font face="Times New Roman" size="4">360. Wenhui Ji, Xu Cheng, Yan Jiang, 
 Zhaodong Sun, <b>Guoying Zhao</b>. Learning from Yourself to Others for 
 Unsupervised Visible-Infrared Re-Identification. TCSVT, 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;356. Yang Liu, Kevin H. M. Cheng, 
+<font face="Times New Roman" size="4">&nbsp;359. Yang Liu, Kevin H. M. Cheng, 
 Marko Savic, Haoyu Chen, Zitong Yu, <b>Guoying Zhao</b>. 3D Face 
 De-identification with Preserving Multi-Facial Attributes: A Benchmark. IEEE 
 Transactions on Biometrics, Behavior, and Identity Science. 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;355. </font>
+<font face="Times New Roman" size="4">&nbsp;358. </font>
 <font face="Times New Roman" size="4">Yan Jiang, Xu Cheng, Hao Yu, Xingyu Liu, 
 Haoyu Chen, <b>Guoying Zhao</b>. <u>DSAF: Dual Space Alignment Framework for 
 Visible-Infrared Person Re-Identification</u>. IEEE Transactions on Multimedia, 
 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4">&nbsp;354. Weisong Zhao, Xiangyu Zhu, 
+<font face="Times New Roman" size="4">&nbsp;357. Weisong Zhao, Xiangyu Zhu, 
 Haichao Shi, Xiao-Yu Zhang, <b>Guoying Zhao</b>, Zhen Lei. Global Cross-Entropy 
 Loss for Deep Face Recognition. IEEE Trans. on Image Processing. 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4"><span lang="fi">&nbsp;35</span>3<span lang="fi">.
+<font face="Times New Roman" size="4"><span lang="fi">&nbsp;35</span>6<span lang="fi">.
 </span>Ling Zhou, Mingpei Wang, Xiaohua Huang, Wenming Zheng, Qirong Mao, <b>
 Guoying Zhao</b>. An empirical study of super-resolution on low-resolution 
 micro-expression recognition. IEEE Transactions on Affective Computing, 2025.</font></p>
 <p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
-<font face="Times New Roman" size="4">&nbsp;352. Shuyang Chu, Menghan Xia, 
+<font face="Times New Roman" size="4">&nbsp;355. </font>
+<font face="Times New Roman" size="4">Yushun Xiao, Wenming Zheng, <b>Guoying 
+Zhao</b>. Dynamical Causal Graph Neural Network for EEG Emotion Recognition. 
+IEEE Transactions on Affective Computing, 2025.</font></p>
+<p _ngcontent-ng-c4097151159 class="MsoNormal" style="margin-top: 0.5cm; margin-bottom: 0.5cm">
+<font face="Times New Roman" size="4">&nbsp;354. Shuyang Chu, Menghan Xia, 
 Mengyao Yuan, Xin Liu, Tapio Sepp&auml;nen, <b>Guoying Zhao</b>, Jingang Shi. Robust 
 Video-based Remote Physiological Measurement through Latent Codebook Querying. 
 IEEE Journal of Biomedical and Health Informatics. 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font face="Times New Roman" size="4">&nbsp;351. Hao Yu, Haoyu Chen, Wei Peng, 
+<font face="Times New Roman" size="4">&nbsp;353. Hao Yu, Haoyu Chen, Wei Peng, 
 Xu Cheng, <b>Guoying Zhao</b>.
 <a target="_blank" href="https://openreview.net/forum?id=orSt7BTll2&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DAAAI.org%2F2025%2FConference%2FAuthors%23your-submissions)">
 FreeNet: Liberating Depth-wise Separable Operations for Building Faster Mobile 
 Vision Architectures</a>. AAAI Conference on Artificial Intelligence (AAAI 
 2025). (Acceptance rate: 23.4%) </font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;350. </font><font face="Times New Roman" size="4">Ali Salar, 
+<font size="4">&nbsp;352. </font><font face="Times New Roman" size="4">Ali Salar, 
 Qing Liu, Yingli Tian, <b>Guoying Zhao</b>. Enhancing Facial Privacy Protection 
 via Weakening Diffusion Purification. CVPR 2025. </font><font size="4">
 (Acceptance rate: 22.1%)</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;349. Yante Li, Hanwen Qi, Haoyu Chen, Xinlian Liang, <b>
+<font size="4">&nbsp;351. Yante Li, Hanwen Qi, Haoyu Chen, Xinlian Liang, <b>
 Guoying Zhao</b>. Deep Change Monitoring: A Hyperbolic Representative Learning 
 Framework and A Dataset for Long-term Fine-grained Tree Change Detection. CVPR 
 2025. (Acceptance rate: 22.1%)</font></p>
 <div class="note-authors">
 	<p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
-	<font size="4" face="Times New Roman">&nbsp;348. Yan Jiang, Hao Yu, Xu 
+	<font size="4" face="Times New Roman">&nbsp;350. Yan Jiang, Hao Yu, Xu 
 	Cheng, Haoyu Chen, Zhaodong Sun, <b>Guoying Zhao</b>. From Laboratory to 
 	Real World: A New Benchmark Towards Privacy-Preserved Visible-Infrared 
-	Person Re-Identification. CVPR 2025. (Acceptance rate: 22.1%)</font></div>
+	Person Re-Identification. CVPR 2025. (Acceptance rate: 22.1%)</font><div class="note-authors">
+		<font size="4" face="Times New Roman">&nbsp;349. Shuyang Chu, Jingang 
+		Shi, Xu Cheng, Haoyu Chen, Xin Liu, Xu Jian, <b>Guoying Zhao</b>. To 
+		Remember, To Adapt, To Preempt: A Stable Continual Test-Time Adaptation 
+		Framework for Remote Physiological Measurement in Dynamic Domain Shifts. 
+		ACM Multimedia 2025.</font></div>
+</div>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;347. Hao Yu, Haoyu Chen, <b>Guoying Zhao</b>. <u>Learning 
+<font size="4">&nbsp;348. Hao Yu, Haoyu Chen, <b>Guoying Zhao</b>. <u>Learning 
 Binary-Antithetical Information Bottleneck for Generalizable Face Anti-Spoofing</u>. 
 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), 
 2025.</font></p>
 <p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
-<font size="4">&nbsp;346. Muzammil Behzad, <b>Guoying Zhao</b>. AffectVLM: 
+<font size="4">&nbsp;347. Muzammil Behzad, <b>Guoying Zhao</b>. AffectVLM: 
 Contrastive Language-Image Learning with Augmented Textual Prompts for 3D/4D 
 Facial Expression Recognition Using Vision-Language Model. 19th IEEE 
 International Conference on Automatic Face and Gesture Recognition (FG), 2025.</font></p>
+<p style="margin-top:0.5cm; margin-bottom:0.5cm" class="MsoNormal">
+<font size="4">&nbsp;346. Haoyuan Zhang, Xiangyu Zhu, Li Gao, Jiawei Pan, Kai 
+Pang, <b>Guoying Zhao</b> &amp; Zhen Lei. Spoof Trace Discovery for Deep Learning 
+Based Explainable Face Anti-Spoofing. IEEE International Joint Conference on 
+Biometrics (IJCB) 2025.</font></p>
 <p style="margin-top: 0.5cm; margin-bottom: 0.5cm" class="MsoNormal">
 <font size="4"><span lang="fi">&nbsp;34</span>5<span lang="fi">. </span>Q<span lang="fi">ianru 
 Xu, Mengting Wei, Huai</span>-Qian Khor, Vankee Lin, <b>Guoying Zhao</b>. SunVid: 
@@ -369,10 +389,9 @@ Journal on Computer Vision (IJC</font><font face="Times New Roman" size="4">V),<
 </span>131: 1346 - 1366, 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
 <font face="Times New Roman" size="4">&nbsp;31<span lang="en-us">7</span>. Haoyu Chen, Hao Tang, Radu 
-Timofte, Luc Van Gool, <b>Guoying Zhao</b>. <u>LART: Neural Correspondence 
-Learning with Latent Regularization Transformer for 3D Motion Transfer</u>.
-</font><font face="Times New Roman" size="4">IEEE Conference on Neural 
-Information Processing Systems (NeurIPS), 2023.</font></p>
+Timofte, Luc Van Gool, <b>Guoying Zhao</b>.<span lang="fi"> </span><u>LART: 
+Neural Correspondence Learning with Latent Regularization Transformer for 3D 
+Motion Transfer</u>. IEEE Conference on Neural Information Processing Systems<b> </b>(NeurIPS), 2023.</font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
 <span lang="en-us"><font face="Times New Roman" size="4">&nbsp;316. Zitong Yu, 
 Yunxiao Qin, Xiaobai Li, Chenxu Zhao, Zhen Lei, and <b>Guoying Zhao</b>. <u>Deep 
@@ -410,7 +429,7 @@ Facial Video-based Physiological Measurement with SlowFast Temporal Difference
 Transformer</u>. International Journal on Computer Vision (IJCV), 2023. </font></p>
 <p class="MsoPlainText" style="text-indent: -.25in; layout-grid-mode: char; text-autospace: none; text-align: justify; text-justify: inter-ideograph; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4"><span lang="en-us">&nbsp;309. </span>Yang 
-Liu, Xingming Zhang, Janne Kauttonen, <b>Guoying Zhao</b>. <u>Uncertain Facial 
+Liu, Xingming Zhang, Janne Kauttonen, <b>GuoyingZhao</b>. <u>Uncertain Facial 
 Expression Recognition via Multi-task Assisted Correction</u>. IEEE Transactions on 
 Multimedia, 2023. </font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt">
@@ -425,7 +444,8 @@ Xueqiao Li, <b>Guoying Zhao</b> &amp; Piia Astikainen. <u>Pain modulates early s
 brain responses to task-irrelevant emotional faces</u>. European Journal of Pain. 
 2023.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; layout-grid-mode: char; margin-left: .25in; margin-right: 0in; margin-top: 6pt; margin-bottom: 6.0pt; ">
-<font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">6</span>. Kaijie Ma, Lina Nie, Beijing Chen &amp; 
+<font face="Times New Roman" size="4">&nbsp;30<span lang="en-us">6</span>. Kaijie Ma, 
+<span lang="fi">Yifan Feng</span>, Beijing Chen &amp; 
 <b>Guoying Zhao</b>. 
 <u>End-to-End Dual-Branch Network Towards Synthetic Speech Detection</u>. IEEE Signal 
 Processing Letters. 2023.</font></p>
@@ -527,8 +547,7 @@ Ognjen Arandjelovic, <b>Guoying Zhao</b>. <u>Short and Long Range Relation Based
 Spatio-Temporal Transformer for Micro-Expression Recognition</u>. IEEE 
 Transactions on Affective Computing, 2022. </font></p>
 <p style="text-indent: -.25in; text-align:justify; text-justify:inter-ideograph; layout-grid-mode:char; text-autospace:none; margin-left:.25in; margin-right:0in; margin-top:6.0pt; margin-bottom:6.0pt" class="MsoPlainText">
-<font size="4" face="Times New Roman">&nbsp;28<span lang="en-us">6</span>. Henglin Shi, Wei 
-Peng, Haoyu Chen, Xin Liu, <b>Guoying Zhao</b>. <u>Multi-scale 3D Shift 
+<font size="4" face="Times New Roman">&nbsp;28<span lang="en-us">6</span>. Henglin Shi, Wei Peng, Haoyu Chen, Xin Liu, <b>Guoying Zhao</b>. <u>Multi-scale 3D Shift 
 Graph Convolution Network for Emotion Recognition from 
 Human Actions</u>. IEEE Intelligent Systems. 
 2022.</font></p>
